Clear all unwanted bits from GT_MODE

References: https://bugs.freedesktop.org/show_bug.cgi?id=79996